--- a/src/main.css
+++ b/src/main.css
@@ -34,9 +34,6 @@
     padding: 0 1.5rem;
   }
   
-  .hidden {
-    height: 5rem;
-  }
   
   /* Header */
   .header {
@@ -69,6 +66,7 @@
     color: var(--color-text);
     text-decoration: none;
     font-size: 0.9rem;
+    font-weight: bold;
     transition: color 0.3s;
   }
   
@@ -131,7 +129,7 @@
   
   .image-placeholder {
     width: 100%;
-    height: 400px;
+    height: 40rem;
     background-color: var(--color-darker);
     border-radius: 8px;
     position: relative;
