--- a/src/main.css
+++ b/src/main.css
@@ -326,9 +326,23 @@
   }
   
   .portfolio-image-placeholder {
-    width: 100%;
-    height: 200px;
+    width: 40rem;
+    margin: auto;
+    height: 20rem;
     background-color: rgba(0, 0, 0, 0.2);
+  }
+.link-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: inherit;
+  background: red;
+  gap: .4 rem;
+}
+  .project-link {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
   }
   
   .portfolio-item.large .portfolio-image-placeholder {
